# query-joiner

./: .gitignore  CMakeLists.txt  QueryExecutor.cpp  QueryExecutor.h  README.md  array.h  command_interpreter.cpp  command_interpreter.h  common.h  compile.sh  data_structures.cpp  data_structures.h  file_manager.cpp  file_manager.h  intermediate_result.cpp  intermediate_result.h  joinable.cpp  joinable.h  main.cpp  makefile  metaprogramming.h  pair.h  parse.cpp  parse.h  query_executor.cpp  query_executor.h  query_join.todo  queue.h  readme.txt  relation_data.cpp  relation_data.h  relation_storage.cpp  relation_storage.h  report_utils.cpp  report_utils.h  scoped_timer.h  sort.h  stretchy_buf.h  task_scheduler.cpp  task_scheduler.h  (+4 more)
tests/: joinable_tests.cpp  test_create_relation_from_file.cpp  test_initialize_relations_and_queries.cpp  test_intermediate_result.cpp  test_query_executor.cpp  test_task_scheduler.cpp
tests/command_interpreter/: command_interpreter_tests.cpp  filenames.txt  queries.txt
workloads/medium/: input  medium_input
workloads/small/: input  mysmall.init  small.init  small.work  test_initialize_relations_and_queries  weird_input
